# cheffe

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: .ycm_extra_conf.py  CMakeLists.txt  CheffeCommon.h  cheffe.cpp  cheffe.h
src/Driver/: CMakeLists.txt  CheffeDriver.cpp  CheffeDriver.h
src/IR/: .ycm_extra_conf.py  CMakeLists.txt  CheffeIngredient.h  CheffeMethodStep.cpp  CheffeMethodStep.h  CheffeProgramInfo.cpp  CheffeProgramInfo.h  CheffeRecipeInfo.cpp  CheffeRecipeInfo.h
src/JIT/: .ycm_extra_conf.py  CMakeLists.txt  CheffeJIT.cpp  CheffeJIT.h
src/Lexer/: .CheffeLexer.cpp.swp  CMakeLists.txt  CheffeLexer.cpp  CheffeLexer.h  CheffeToken.h
src/Parser/: CMakeLists.txt  CheffeIngredient.h  CheffeMethodStep.cpp  CheffeMethodStep.h  CheffeNestInfo.cpp  CheffeNestInfo.h  CheffeParser.cpp  CheffeParser.h  CheffeProgramInfo.cpp  CheffeProgramInfo.h  CheffeRecipeInfo.cpp  CheffeRecipeInfo.h  CheffeScopeInfo.cpp  CheffeScopeInfo.h
src/Utils/: CMakeLists.txt  CheffeDebugUtils.cpp  CheffeDebugUtils.h  CheffeDiagnosticHandler.cpp  CheffeDiagnosticHandler.h  CheffeErrorHandling.cpp  CheffeErrorHandling.h  CheffeFileHandler.cpp  CheffeFileHandler.h  CheffeUtils.h
test/: .ycm_extra_conf.py  CMakeLists.txt  CheffeDiagnosticsTest.cpp  CheffeJITExecutionTest.cpp  CheffeParserTest.cpp  bad-comments.ch  fibonacci.ch  method-line-break.ch
test/Diagnostics/: bad-plurality-cooking-time-1.ch  bad-plurality-refrigerate-1.ch  bad-plurality-refrigerate-2.ch  bad-plurality-serve-1.ch  bad-plurality-serve-2.ch  ordinal-identifiers.ch
test/JITExecution/: 99-bottles.ch  add-1.ch  add-2.ch  adddry-1.ch  clean-bowl-1.ch  clean-bowl-2.ch  clean-bowl-3.ch  combine-1.ch  combine-2.ch  control-flow-1.ch  control-flow-2.ch  control-flow-3.ch  control-flow-4.ch  divide-1.ch  divide-2.ch  exp.ch  fizzbuzz.ch  fold-1.ch  fold-2.ch  hello-cake.ch  liquefy-ingr-1.ch  liquefy-ingr-2.ch  loops.ch  mix-bowl-1.ch  multi-table.ch  nothing-2.ch  nothing.ch  pour-1.ch  put-1.ch  put-2.ch  put-3.ch  put-4.ch  put-5.ch  put-6.ch  refrigerate-1.ch  refrigerate-2.ch  refrigerate-3.ch  remove-1.ch  remove-2.ch  reset-ingredient-values.ch  (+10 more)
test/Parser/: bad-scopes-1.ch  bad-scopes-2.ch  bad-scopes-3.ch  bad-scopes-4.ch  bad-scopes-5.ch  bad-scopes-6.ch  bad-title.ch  deprecated-method.ch  fibonacci.ch  hello-full.ch  illegal-cooking-time.ch  illegal-ingredient-no-name-2.ch  illegal-ingredient-no-name.ch  illegal-ingredient.ch  illegal-method-keyword.ch  ingredient-no-initial-value.ch  ingredient-no-measure.ch  look-ahead.ch  method-step-add-dry.ch  method-step-add.ch  method-step-clean.ch  (+25 more)
